syntax = "proto3";

option java_package = "org.jetbrains.zip.signer.proto";
option java_outer_classname = "ZipMetadataProtos";
option java_multiple_files = true;

message ZipMetadataProto {
    uint32 signatureSchemeVersion = 1;
    ZipSignatureBlockProto content = 2;
}

message ZipSignatureBlockProto {
    repeated DigestProto digests = 1;
    repeated SignerBlockProto signers = 2;
}

message SignerBlockProto {
    repeated bytes certificates = 1;
    repeated SignatureDataProto signatures = 2;
    bytes publicKey = 3;
}

message DigestProto {
    AlgorithmId algorithmId = 1;
    enum AlgorithmId {
        SHA256 = 0;
        SHA512 = 1;
    }
    bytes digestBytes = 2;
}

message SignatureDataProto {
    AlgorithmId algorithmId = 1;
    enum AlgorithmId {
        RSA_WITH_SHA256 = 0;
        RSA_WITH_SHA512 = 2;
        DSA_WITH_SHA256 = 3;
    }
    bytes signatureBytes = 2;
}